--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" href="css/main.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Harro and Welcome</title>
+    <title>Welcome</title>
 </head>
 <body>
     <section class="intro">
@@ -12,7 +12,8 @@
             <h3>I'm a web developer</h3><br />
             <h4>I stand at the crossroad where</h4><br />
             <h2>Design battles the code</h2><br />
-            <h3>And I love it</h3>
+            <h3>And I love it
+            <a href="portfolio.html" class=button-line>Check me out</a></h3>
         </article>
     </section>
 </body>
