--- a/portfolio.html
+++ b/portfolio.html
@@ -2,15 +2,16 @@
 <head>
     <link rel="stylesheet" href="css/main.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen:300,400">
-    <title>Welcome</title>
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen:300,400">-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
+    <title>Portfolio | Srdjanov</title>
 </head>
 <body class="font-portfolio">
     <header></header>
     <aside>
         <nav>
-           <div>
-               <img src="" alt="profile">
+           <div class="profile-picture">
+               <img src="img/img-profile.png" alt="profile">
            </div>
             <ul>
                 <li><a href="#">Skills</a></li>
