--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     </aside>
     <div class="content">
         <section id="skills">
-            <article class="clearfix">
+            <article class="">
                <div>
                    <h1>Skills</h1>
                    
