--- a/portfolio.html
+++ b/portfolio.html
@@ -8,18 +8,34 @@
 <body class="font-portfolio">
     <header></header>
     <aside>
-        <nav>
-           <div class="profile-picture">
+        <nav class="menu">
+           <!--<div class="profile-picture">
                <img src="img/img-profile.png" alt="profile">
-           </div>
+           </div>-->
             <ul>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Contact</a></li>
+                <li>
+                    <a href="#" class="icon-user"></a>
+                    <label class="navbar-tooltip">About me</label>
+                </li>
+                <li>
+                    <a href="#" class="icon-skills"></a>
+                    <label class="navbar-tooltip">Skills</label>
+                </li>
+                <li>
+                    <a href="#" class="icon-experience"></a>
+                    <label class="navbar-tooltip">Experience</label>
+                </li>
+                <li>
+                    <a href="#" class="icon-education"></a>
+                    <label class="navbar-tooltip">Education</label>
+                </li>
+                <li>
+                    <a href="#" class="icon-contact"></a>
+                    <label class="navbar-tooltip">Contact</label>
+                </li>
             </ul>
         </nav>
-        <div class="bg-aside"></div>
+        <!--<div class="bg-aside"></div>-->
     </aside>
     <div class="content">
         <section id="skills">
