--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,29 @@
         </nav>
         <!--<div class="bg-aside"></div>-->
     </aside>
+    <div class="overlay"></div>
     <div class="content">
+        <section id="about">
+            <article class="half-width">
+                <div>
+                    <h1>About me<i class="icon-user"></i></h1>
+                    <p>
+                        Highly motivated, well organized, communicative guy that loves bringing design to life.<br>
+                        Working on a large projects challanged me to write well structured, light and reusable code.
+                    </p>
+                    <p>
+                        My main skills are HTML, CSS, JavaScript. I have experience with organizing HTML and CSS using BEM although I'm not a big fan of it. Most of the projects & products I've been working on are written in ASP.NET environment.
+                    </p>
+                    <p class="no-margin-bottom">
+                        Besides coding, I enjoy playing guitar, making music and gaming.
+                    </p>
+                </div>
+            </article>
+        </section>
         <section id="skills">
             <article>
                <div>
-                   <h1>Skills <i class="icon-skills"></i></h1>
-                   
-                   
+                   <h1>Skills<i class="icon-skills"></i></h1>
                    <ul class="tags">
                        <li>
                            <span class="active" onclick="toggleSkill('html', this);">HTML</span>
@@ -99,7 +115,7 @@
         <section id="experience">
             <article class="full-width">
                 <div>
-                <h1>Experience <i class="icon-experience"></i></h1>
+                    <h1>Experience <i class="icon-experience"></i></h1>
                     <ul class="list">
                         <li>
                             <h2>Front End Developer, Zugseil</h2>
