--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="css/main.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon">
     <title>Welcome | Srdjanov</title>
 </head>
 <body>
