--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <title>Portfolio | Srdjanov</title>
     <link rel="stylesheet" href="css/main.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon">
 </head>
 <body class="font-portfolio">
     <header></header>
