--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     <div class="overlay"></div>
     <div class="content">
         <section id="about">
-            <article class="half-width">
+            <article>
                 <div>
                     <h1>About me<i class="icon-user"></i></h1>
                     <p>
@@ -132,6 +132,19 @@
                             <p>CSS3 with SASS</p>
                             <p>Jquery & AngularJS</p>
                             <p>Gulp</p>
+                        </li>
+                        <li>
+                            <h2>Web designer & Front End Developer, customweb GmbH (freelance)</h2>
+                            <h4>February 2016 - present.</h4>
+                            <label>Implementation & maintenance of website</label>
+                            <h3>My responsibilities</h3>
+                            <p>Turning PSD files into cross-browser compatible and responsive pages</p>
+                            <p>Creating reusable HTML templates, components and CSS code</p>
+                            <h3>Used technologies</h3>
+                            <p>Hexo</p>
+                            <p>NodeJS</p>
+                            <p>CSS3 with SASS</p>
+                            <p>Compass</p>
                         </li>
                         <li>
                             <h2>Lead Front End Developer, Danulabs</h2>
