--- a/pages/cv.html
+++ b/pages/cv.html
@@ -5,23 +5,23 @@
        </div>-->
         <ul>
             <li>
-                <a href="#" class="icon-user"></a>
+                <a href="" class="icon-user"></a>
                 <label class="navbar-tooltip">About me</label>
             </li>
             <li>
-                <a href="#" class="icon-skills"></a>
+                <a href="" class="icon-skills"></a>
                 <label class="navbar-tooltip">Skills</label>
             </li>
             <li>
-                <a href="#" class="icon-experience"></a>
+                <a href="" class="icon-experience"></a>
                 <label class="navbar-tooltip">Experience</label>
             </li>
             <li>
-                <a href="#" class="icon-education"></a>
+                <a href="" class="icon-education"></a>
                 <label class="navbar-tooltip">Education</label>
             </li>
             <li>
-                <a href="#" class="icon-contact"></a>
+                <a href="" class="icon-contact"></a>
                 <label class="navbar-tooltip">Contact</label>
             </li>
         </ul>
