--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="js/app.js"></script>
 
         <!--<title>Welcome | Srdjanov</title>-->
-        <title ng-bind="title +' | KS '">Welcome</title>
+        <title ng-bind="title +' | Konstantin Srdjanov '">Welcome</title>
         <link rel="stylesheet" href="css/main.min.css" />
     </head>
     <body ng-controller="MainController">
