--- a/pages/cv.html
+++ b/pages/cv.html
@@ -5,23 +5,19 @@
        </div>-->
         <ul>
             <li>
-                <a href="" class="icon-user"></a>
+                <a href="" onclick="scrollToSection('about')" class="icon-user"></a>
                 <label class="navbar-tooltip">About me</label>
             </li>
             <li>
-                <a href="" class="icon-skills"></a>
+                <a href="" onclick="scrollToSection('skills')" class="icon-skills"></a>
                 <label class="navbar-tooltip">Skills</label>
             </li>
             <li>
-                <a href="" class="icon-experience"></a>
+                <a href="" onclick="scrollToSection('experience')" class="icon-experience"></a>
                 <label class="navbar-tooltip">Experience</label>
             </li>
             <li>
-                <a href="" class="icon-education"></a>
-                <label class="navbar-tooltip">Education</label>
-            </li>
-            <li>
-                <a href="" class="icon-contact"></a>
+                <a href="" onclick="scrollToSection('contact')" class="icon-contact"></a>
                 <label class="navbar-tooltip">Contact</label>
             </li>
         </ul>
@@ -163,6 +159,25 @@
                         <p>CSS3 with SASS</p>
                         <p>Compass</p>
                         <p>Build tools</p>
+                    </li>
+                </ul>
+            </div>
+        </article>
+    </section>
+    <section id="contact">
+        <article>
+            <div class="overflow-visible">
+                <h1>Contact<i class="icon-contact"></i></h1>
+                <ul class="list">
+                    <li>
+                        <a target="_blank" href="https://www.facebook.com/konstantin.srdjanov" class="social icon-facebook"></a>
+                        <a target="_blank" href="https://rs.linkedin.com/in/konstantin-srdjanov-3a5647a3" class="social icon-linkedin"></a>
+                        <a href="mailto:srdjanov.konstantin@gmail.com" class="social icon-email tooltip-parent">
+                            <span class="tooltip">srdjanov.konstantin@gmail.com</span>    
+                        </a>
+                        <a href="skype:qualc0l3?add" class="social icon-skype tooltip-parent">
+                            <span class="tooltip">qualc0l3</span>
+                        </a>
                     </li>
                 </ul>
             </div>
