--- a/pages/landing.html
+++ b/pages/landing.html
@@ -6,6 +6,9 @@
         <h4>I stand at the crossroad where</h4><br />
         <h2>Design battles the code</h2><br />
         <h3>And I love it
-        <a href="" ng-click='nav("/cv")' class=button-line>Check me out</a></h3>
+        <a ng-click='nav("/cv")' class="button-line" style="cursor: pointer;">Check me out</a></h3>
     </article>
 </section>
+<script>
+    $('body').removeClass('font-portfolio');
+</script>
