--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="keywords" content="web,design,html,css,html5,css3,development,sass,compass,js">
         
         <meta property="og:title" content="Konstantins' CV">
-        <meta property="og:image" content="https://srdjanov.github.io/img/ks.png">
+        <meta property="og:image" content="https://srdjanov.github.io/img/ks.jpg">
         <meta property="og:description" content="Konstantins' CV website, containing information about working experience, knowledge and used technologies.">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://srdjanov.github.io">
