about me section mobile layout

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -26,7 +26,7 @@
 <div class="overlay"></div>
 <div class="content">
     <section id="about">
-        <article>
+        <article class="half-and-quarter-width relative">
             <div>
                 <h1>About me<i class="icon-user"></i></h1>
                 <p>
@@ -39,6 +39,9 @@
                 <p class="no-margin-bottom">
                     Besides coding, I enjoy playing guitar, making music and gaming.
                 </p>
+                <figure class="profile-picture-wrapper">
+                    <img src="img/img-profile.png">
+                </figure>
             </div>
         </article>
     </section>
