added shake animation

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -39,7 +39,7 @@
                 <p class="no-margin-bottom">
                     Besides coding, I enjoy playing guitar, making music and gaming.
                 </p>
-                <figure class="profile-picture-wrapper">
+                <figure class="profile-picture-wrapper animated shake long">
                     <img src="img/img-profile.png">
                 </figure>
             </div>
