--- a/pages/cv.html
+++ b/pages/cv.html
@@ -20,10 +20,13 @@
                 <a href="" onclick="scrollToSection('contact')" class="icon-contact"></a>
                 <label class="navbar-tooltip">Contact</label>
             </li>
+            <li>
+                <a href=""  ng-click='nav("/portfolio")' class="icon-contact"></a>
+                <label class="navbar-tooltip">Portfolio</label>
+            </li>
         </ul>
     </nav>
 </aside>
-<div class="overlay"></div>
 <div class="content">
     <section id="about">
         <article class="half-and-quarter-width relative">
