portfolio page build up

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -21,7 +21,7 @@
                 <label class="navbar-tooltip">Contact</label>
             </li>
             <li>
-                <a href=""  ng-click='nav("/portfolio")' class="icon-contact"></a>
+                <a href=""  ng-click='nav("/portfolio")' class="icon-portfolio"></a>
                 <label class="navbar-tooltip">Portfolio</label>
             </li>
         </ul>
