portfolio page / animated icons section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         
         <title ng-bind="title +' | Konstantin Srdjanov '">Welcome</title>
         <link rel="shortcut icon" type="image/x-icon">
+        <link rel="stylesheet" href="css/icon-font.css" />
         <link rel="stylesheet" href="css/main.min.css" />
     </head>
     <body ng-controller="MainController">
