--- a/pages/cv.html
+++ b/pages/cv.html
@@ -1,8 +1,5 @@
 <aside>
     <nav class="menu">
-       <!--<div class="profile-picture">
-           <img src="img/img-profile.png" alt="profile">
-       </div>-->
         <ul>
             <li>
                 <a href="" onclick="scrollToSection('about')" class="icon-user"></a>
@@ -17,7 +14,7 @@
                 <label class="navbar-tooltip">Experience</label>
             </li>
             <li>
-                <a href="" onclick="scrollToSection('contact')" class="icon-contact"></a>
+                <a href="" onclick="scrollToSection('contact')" class="icon-phonebook"></a>
                 <label class="navbar-tooltip">Contact</label>
             </li>
             <li>
@@ -173,7 +170,7 @@
     <section id="contact">
         <article>
             <div class="overflow-visible">
-                <h1>Contact<i class="icon-contact"></i></h1>
+                <h1>Contact<i class="icon-phonebook"></i></h1>
                 <ul class="list">
                     <li>
                         <a target="_blank" href="https://www.facebook.com/konstantin.srdjanov" class="social icon-facebook"></a>
