contact - chat layout

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -186,6 +186,46 @@
             </div>
         </article>
     </section>
+    
+    <section>
+        <div class="contact-form">
+            <ng-form>
+                <div class="step-one contact-step">
+                    <div class="contact-step-left">
+                        <i class="icon-boy"></i>
+                        <div class="contact-step-message">
+                            Hello there! My name is Konstantin, what's yours?
+                        </div>
+                    </div>
+                    <div class="contact-step-right">
+                        <input type="text" class="contact-message-input" />
+                        <a ng-click="">Enter</a>
+                    </div>
+                </div>
+                <div class="step-two contact-step">
+                    <div class="contact-step-left">
+                        <i class="icon-boy"></i>
+                    </div>
+                    <div class="contact-step-right">
+                        <a ng-click="">Enter</a>    
+                    </div>
+                </div>
+                <div class="step-three contact-step">
+                    <div class="contact-step-left">
+                        <i class="icon-boy"></i>
+                    </div>
+                    <div class="contact-step-right">
+                        <a ng-click="">Enter</a>    
+                    </div>
+                </div>
+                <div class="step-four contact-step">
+                    <div class="contact-step-left">
+                        <i class="icon-boy"></i>
+                    </div>
+                </div>
+            </ng-form>
+        </div>
+    </section>
 </div>
 <script>
     $('body').addClass('font-portfolio');
